--- a/index.html
+++ b/index.html
@@ -8,14 +8,19 @@
 </head>
 <body>
     <header>
-        <img src="Assets_Netuno/assets/logo.png" alt="logocabeça">
-    <nav>
+        <img src="Assets_Netuno/assets/logo.png" alt="logo netuno">
+
         <a href="#">O Projeto</a>
         <a href="#">O Problema</a>
         <a href="#">Sua Jornada</a>
         <a href="#">Objetivos</a>
-        <button id="botao1">Processo Seletivo</button>
-    </nav>
+
+        <button>Processo Seletivo</button>
     </header>
+    <main>
+        <div id="parte1">
+            
+        </div>
+    </main>
 </body>
 </html>
