atualização projeto netuno

--- a/index.html
+++ b/index.html
@@ -170,7 +170,32 @@
             <img id="imagem6" src="Assets_Netuno/Elements/Vector1.png" alt="detalhe2">
         </section>
         <section id="parte5">
-            
+            <div>
+                <h1 id="objetivos">Objetivos</h1>
+            </div>
+            <div id="caixa1" class="bloco">
+                <h1 id="t">Otimizar</h1>
+                <p id="t1">Otimizar todo o processo de 
+                    contratação chegando a 
+                    contribuir com uma economia
+                    de 40% no processo de 
+                    recrutamento.</p>
+            </div>
+            <div id="caixa2" class="bloco">
+                <h1 id="t">Gerar</h1>
+                <p id="t1">Gerar novas oportunidades de 
+                    carreira para pessoas
+                    interessadas em ingressar na
+                    área ou migrar de outras áreas
+                    que esteja descontente.</p>
+            </div>
+            <div id="caixa3" class="bloco">
+                <h1 id="t">Filtrar</h1>
+                <p id="t1">Crias oportunidades brilhantes
+                    para profissionais que se
+                    destacarem junto a parceiros
+                    estratégicos de negócios.</p>
+            </div>
         </section>
     </main>
 </body>
