--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             </div>
             <div id="caixa1" class="bloco">
                 <h1 id="t">Otimizar</h1>
-                <p id="t1">Otimizar todo o processo de 
+                <p id="t7">Otimizar todo o processo de 
                     contratação chegando a 
                     contribuir com uma economia
                     de 40% no processo de 
@@ -183,7 +183,7 @@
             </div>
             <div id="caixa2" class="bloco">
                 <h1 id="t">Gerar</h1>
-                <p id="t1">Gerar novas oportunidades de 
+                <p id="t7">Gerar novas oportunidades de 
                     carreira para pessoas
                     interessadas em ingressar na
                     área ou migrar de outras áreas
@@ -191,11 +191,16 @@
             </div>
             <div id="caixa3" class="bloco">
                 <h1 id="t">Filtrar</h1>
-                <p id="t1">Crias oportunidades brilhantes
+                <p id="t7">Crias oportunidades brilhantes
                     para profissionais que se
                     destacarem junto a parceiros
                     estratégicos de negócios.</p>
             </div>
+        </section>
+        <section id="parte6">
+            <footer>
+                <p id="lala">aosdoaisjdoaisjd</p>
+            </footer>
         </section>
     </main>
 </body>
